--- a/circuithub-prelude.cabal
+++ b/circuithub-prelude.cabal
@@ -27,6 +27,7 @@ library
                      Data.Text.Clean
                      Data.Text.Sequences
                      Data.Text.Convert
+                     Data.Text.Read
                      Data.ByteString.Extra
                      Data.Maybe.Extra
                      Data.Tuple.Extra
@@ -72,3 +73,4 @@ library
                  , errors                        >= 1.4.7
                  , split                         >= 0.2.2         && < 0.3
                  , vector                        >= 0.10.9.1      && < 0.11
+                 , mono-traversable              >= 0.6.1
