Move Data.Text.Read to Data.Text.Read.Extra to avoid conflict with text package

--- a/circuithub-prelude.cabal
+++ b/circuithub-prelude.cabal
@@ -27,7 +27,7 @@ library
                      Data.Text.Clean
                      Data.Text.Sequences
                      Data.Text.Convert
-                     Data.Text.Read
+                     Data.Text.Read.Extra
                      Data.ByteString.Extra
                      Data.Maybe.Extra
                      Data.Tuple.Extra
