--- a/circuithub-prelude.cabal
+++ b/circuithub-prelude.cabal
@@ -70,7 +70,7 @@ library
                  , aeson-pretty                  >= 0.7.1
                  , utf8-string                   >= 0.3.8
                  , either                        >= 4.3.0.1
-                 , errors                        >= 1.4.7
+                 , errors                        >= 1.4.7         && < 2.0
                  , split                         >= 0.2.2         && < 0.3
                  , vector                        >= 0.10.9.1      && < 0.11
                  , mono-traversable              >= 0.6.1
